Clone hunts (#72)
* CLone hunts - be implementation

* clone hunt UI

* clone asset usage tracker for hunt cloning

* prettier

* nits and improvements

* remove reduntant checks
